--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "AuthClient",
+    "ValidIssuer": "AuthServer",
+    "Secret": "Q8et4HxZS7DtLaMdGMCs"
+  }
 }
