--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "formik": "^2.2.9",
     "i18next": "^22.5.0",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-flag-icon-css": "^1.0.25",
     "react-i18next": "^12.3.1",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
@@ -29,7 +31,8 @@
     "semantic-ui-react-numberinput": "^1.5.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,6 +60,7 @@
   },
   "devDependencies": {
     "@types/react-flag-icon-css": "^1.0.5",
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "@types/yup": "^0.32.0"
   }
 }
