--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7080;http://localhost:5162",
+      "applicationUrl": "https://localhost:7080;http://10.0.0.10:7080;http://localhost:5162",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
