--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "i18next": "^22.5.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-flag-icon-css": "^1.0.25",
     "react-i18next": "^12.3.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
